--- a/bmall-backstage/src/main/resources/templates/index.html
+++ b/bmall-backstage/src/main/resources/templates/index.html
@@ -242,7 +242,7 @@ function link_operating(name,title){
 				 <li><a href="javascript:void(0" name="Systems.html" title="系统设置" class="iframeurl"><i class="icon-cog"></i>网站设置</a></li>
 				 <li><a href="javascript:void(0)" name="admin_info.html" title="个人信息" class="iframeurl"><i class="icon-user"></i>个人资料</a></li>
 				 <li class="divider"></li>
-				 <li><a href="javascript:ovid(0)" id="Exit_system"><i class="icon-off"></i>退出</a></li>
+				 <li><a href="/logout" id="Exit_system"><i class="icon-off"></i>退出</a></li>
 				</ul>
 			   </li>
 	           <li class="purple">
