--- a/bmall-backstage/src/main/resources/templates/admin/role-list.html
+++ b/bmall-backstage/src/main/resources/templates/admin/role-list.html
@@ -1,30 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="renderer" content="webkit|ie-comp|ie-stand"/>
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-<meta http-equiv="Cache-Control" content="no-siteapp" />
-        <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="/css/style.css"/>       
-        <link href="/assets/css/codemirror.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="/assets/css/ace.min.css" />
-        <link rel="stylesheet" href="/font/css/font-awesome.min.css" />
-        <!--[if lte IE 8]>
-		  <link rel="stylesheet" href="/assets/css/ace-ie.min.css" />
-		<![endif]-->
-		<script src="js/jquery-1.9.1.min.js"></script>
-        <script src="/assets/js/bootstrap.min.js"></script>
-		<script src="/assets/js/typeahead-bs2.min.js"></script>           	
-		<script src="/assets/js/jquery.dataTables.min.js"></script>
-		<script src="/assets/js/jquery.dataTables.bootstrap.js"></script>
-        <script src="/assets/layer/layer.js" type="text/javascript" ></script>          
-        <script src="/assets/laydate/laydate.js" type="text/javascript"></script>
 <title>管理权限</title>
 </head>
-
 <body>
- <div class="margin clearfix">
+ <div class="margin clearfix"  layout:fragment="content" id="content" seq="11">
    <div class="border clearfix">
        <span class="l_f">
         <a href="Competence.html" id="Competence_add" class="btn btn-warning" title="添加权限"><i class="fa fa-plus"></i> 添加权限</a>
