--- a/bmall-backstage/src/main/resources/templates/admin/role-list.html
+++ b/bmall-backstage/src/main/resources/templates/admin/role-list.html
@@ -1,204 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{layout.html}">
-<div class="page-content" layout:fragment="content">
+<div class="page-content" layout:fragment="content" seq="11">
 	<div class="page-content-area">
 		<div class="row">
 			<div class="col-xs-12">
-				<!-- PAGE CONTENT BEGINS -->
 				<div class="row">
 					<div class="col-xs-12">
-						<table id="sample-table-1"
-							class="table table-striped table-bordered table-hover">
-							<thead>
-								<tr>
-									<th class="center"><label class="position-relative">
-											<input type="checkbox" class="ace" /> <span class="lbl"></span>
-									</label></th>
-									<th>航班类型</th>
-									<th>客舱级别</th>
-									<th class="hidden-480">行李数量上限</th>
-									<th>每件尺寸限制</th>
-									<th class="hidden-480"><i
-										class="ace-icon fa fa-clock-o bigger-110 hidden-480"></i>
-										每件重量上限</th>
-									<th class="hidden-480">操作</th>
-								</tr>
-							</thead>
-
-							<tbody>
-								<tr>
-									<td class="center"><label class="position-relative">
-											<input type="checkbox" class="ace" /> <span class="lbl"></span>
-									</label></td>
-
-									<td><a href="#">国内航班</a></td>
-									<td>头等舱</td>
-									<td class="hidden-480">2件</td>
-									<td>A+B+C<145cm</td>
-
-									<td class="hidden-480"><span
-										class="label label-sm label-warning">5千克</span></td>
-									<td>
-										<div class="hidden-sm hidden-xs btn-group">
-											<button class="btn btn-xs btn-success" title="">
-												<i class="ace-icon fa fa-search-plus bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-info">
-												<i class="ace-icon fa fa-pencil bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-danger">
-												<i class="ace-icon fa fa-trash-o bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-warning">
-												<i class="ace-icon fa fa-flag bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-success">
-												<i class="ace-icon fa fa-check bigger-120"></i>
-											</button>
-										</div>
-									</td>
-								</tr>
-
-								<tr>
-									<td class="center"><label class="position-relative">
-											<input type="checkbox" class="ace" /> <span class="lbl"></span>
-									</label></td>
-
-									<td><a href="#">国内航班</a></td>
-									<td>头等舱</td>
-									<td class="hidden-480">2件</td>
-									<td>A+B+C<145cm</td>
-
-									<td class="hidden-480"><span
-										class="label label-sm label-success">5千克</span></td>
-									<td>
-										<div class="hidden-sm hidden-xs btn-group">
-											<button class="btn btn-xs btn-success" title="">
-												<i class="ace-icon fa fa-search-plus bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-info">
-												<i class="ace-icon fa fa-pencil bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-danger">
-												<i class="ace-icon fa fa-trash-o bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-warning">
-												<i class="ace-icon fa fa-flag bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-success">
-												<i class="ace-icon fa fa-check bigger-120"></i>
-											</button>
-										</div>
-									</td>
-								</tr>
-
-								<tr>
-									<td class="center"><label class="position-relative">
-											<input type="checkbox" class="ace" /> <span class="lbl"></span>
-									</label></td>
-
-									<td><a href="#">国内航班</a></td>
-									<td>头等舱</td>
-									<td class="hidden-480">2件</td>
-									<td>A+B+C<145cm</td>
-
-									<td class="hidden-480"><span
-										class="label label-sm label-inverse arrowed-in">5千克</span></td>
-									<td>
-										<div class="hidden-sm hidden-xs btn-group">
-											<button class="btn btn-xs btn-success" title="">
-												<i class="ace-icon fa fa-search-plus bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-info">
-												<i class="ace-icon fa fa-pencil bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-danger">
-												<i class="ace-icon fa fa-trash-o bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-warning">
-												<i class="ace-icon fa fa-flag bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-success">
-												<i class="ace-icon fa fa-check bigger-120"></i>
-											</button>
-										</div>
-									</td>
-								</tr>
-
-								<tr>
-									<td class="center"><label class="position-relative">
-											<input type="checkbox" class="ace" /> <span class="lbl"></span>
-									</label></td>
-
-									<td><a href="#">国内航班</a></td>
-									<td>头等舱</td>
-									<td class="hidden-480">2件</td>
-									<td>A+B+C<145cm</td>
-
-									<td class="hidden-480"><span
-										class="label label-sm label-warning arrowed-right">5千克</span>
-									</td>
-									<td>
-										<div class="hidden-sm hidden-xs btn-group">
-											<button class="btn btn-xs btn-success" title="">
-												<i class="ace-icon fa fa-search-plus bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-info">
-												<i class="ace-icon fa fa-pencil bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-danger">
-												<i class="ace-icon fa fa-trash-o bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-warning">
-												<i class="ace-icon fa fa-flag bigger-120"></i>
-											</button>
-
-											<button class="btn btn-xs btn-success">
-												<i class="ace-icon fa fa-check bigger-120"></i>
-											</button>
-										</div>
-									</td>
-								</tr>
-
-
-							</tbody>
-						</table>
-					</div>
-					<!-- /.span -->
-				</div>
-				<!-- /.row -->
-
-				<div class="hr hr-18 dotted hr-double"></div>
-
-				<h4 class="pink">
-					<i
-						class="ace-icon fa fa-hand-o-right icon-animated-hand-pointer blue"></i>
-					<a href="#modal-table" role="button" class="blue"
-						data-toggle="modal">点击弹出层表格</a>
-				</h4>
-
-				<div class="hr hr-18 dotted hr-double"></div>
-
-				<div class="row">
-					<div class="col-xs-12">
-
-						<div class="table-header">差旅单管理</div>
-
 						<table width="100%" class="CSSearchTbl" cellpadding="0"
 							cellspacing="0">
 							<tr>
@@ -297,196 +104,6 @@
 											</div>
 										</td>
 									</tr>
-
-									<tr>
-										<td class="center"><label class="position-relative">
-												<input type="checkbox" class="ace" /> <span class="lbl"></span>
-										</label></td>
-
-										<td>商务研发部</td>
-										<td><a href="#" class="yuangongBtn" rel="#yuangong">CL1234567891234567</a></td>
-										<td class="hidden-480">C1234567891234</td>
-										<td class="hidden-480"><span
-											class="label label-sm label-warning">广州北京0801</span></td>
-										<td>未提交</td>
-										<td>张国立</td>
-										<td>2012-08-01</td>
-										<td>
-											<div class="hidden-sm hidden-xs btn-group">
-												<button class="btn btn-xs btn-success" title="">
-													<i class="ace-icon fa fa-search-plus bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-info">
-													<i class="ace-icon fa fa-pencil bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-danger">
-													<i class="ace-icon fa fa-trash-o bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-warning">
-													<i class="ace-icon fa fa-flag bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-success">
-													<i class="ace-icon fa fa-check bigger-120"></i>
-												</button>
-											</div>
-										</td>
-									</tr>
-
-									<tr>
-										<td class="center"><label class="position-relative">
-												<input type="checkbox" class="ace" /> <span class="lbl"></span>
-										</label></td>
-
-										<td>商务研发部</td>
-										<td><a href="#" class="yuangongBtn" rel="#yuangong">CL1234567891234567</a></td>
-										<td class="hidden-480">C1234567891234</td>
-										<td class="hidden-480"><span
-											class="label label-sm label-warning">广州北京0801</span></td>
-										<td>未提交</td>
-										<td>张国立</td>
-										<td>2012-08-01</td>
-										<td>
-											<div class="hidden-sm hidden-xs btn-group">
-												<button class="btn btn-xs btn-success" title="">
-													<i class="ace-icon fa fa-search-plus bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-info">
-													<i class="ace-icon fa fa-pencil bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-danger">
-													<i class="ace-icon fa fa-trash-o bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-warning">
-													<i class="ace-icon fa fa-flag bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-success">
-													<i class="ace-icon fa fa-check bigger-120"></i>
-												</button>
-											</div>
-										</td>
-									</tr>
-
-									<tr>
-										<td class="center"><label class="position-relative">
-												<input type="checkbox" class="ace" /> <span class="lbl"></span>
-										</label></td>
-
-										<td>商务研发部</td>
-										<td><a href="#" class="yuangongBtn" rel="#yuangong">CL1234567891234567</a></td>
-										<td class="hidden-480">C1234567891234</td>
-										<td class="hidden-480"><span
-											class="label label-sm label-warning">广州北京0801</span></td>
-										<td>未提交</td>
-										<td>张国立</td>
-										<td>2012-08-01</td>
-										<td>
-											<div class="hidden-sm hidden-xs btn-group">
-												<button class="btn btn-xs btn-success" title="">
-													<i class="ace-icon fa fa-search-plus bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-info">
-													<i class="ace-icon fa fa-pencil bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-danger">
-													<i class="ace-icon fa fa-trash-o bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-warning">
-													<i class="ace-icon fa fa-flag bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-success">
-													<i class="ace-icon fa fa-check bigger-120"></i>
-												</button>
-											</div>
-										</td>
-									</tr>
-
-									<tr>
-										<td class="center"><label class="position-relative">
-												<input type="checkbox" class="ace" /> <span class="lbl"></span>
-										</label></td>
-
-										<td>商务研发部</td>
-										<td><a href="#" class="yuangongBtn" rel="#yuangong">CL1234567891234567</a></td>
-										<td class="hidden-480">C1234567891234</td>
-										<td class="hidden-480"><span
-											class="label label-sm label-warning">广州北京0801</span></td>
-										<td>未提交</td>
-										<td>张国立</td>
-										<td>2012-08-01</td>
-										<td>
-											<div class="hidden-sm hidden-xs btn-group">
-												<button class="btn btn-xs btn-success" title="">
-													<i class="ace-icon fa fa-search-plus bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-info">
-													<i class="ace-icon fa fa-pencil bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-danger">
-													<i class="ace-icon fa fa-trash-o bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-warning">
-													<i class="ace-icon fa fa-flag bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-success">
-													<i class="ace-icon fa fa-check bigger-120"></i>
-												</button>
-											</div>
-										</td>
-									</tr>
-
-									<tr>
-										<td class="center"><label class="position-relative">
-												<input type="checkbox" class="ace" /> <span class="lbl"></span>
-										</label></td>
-
-										<td>商务研发部</td>
-										<td><a href="#" class="yuangongBtn" rel="#yuangong">CL1234567891234567</a></td>
-										<td class="hidden-480">C1234567891234</td>
-										<td class="hidden-480"><span
-											class="label label-sm label-warning">广州北京0801</span></td>
-										<td>未提交</td>
-										<td>张国立</td>
-										<td>2012-08-01</td>
-										<td>
-											<div class="hidden-sm hidden-xs btn-group">
-												<button class="btn btn-xs btn-success" title="">
-													<i class="ace-icon fa fa-search-plus bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-info">
-													<i class="ace-icon fa fa-pencil bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-danger">
-													<i class="ace-icon fa fa-trash-o bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-warning">
-													<i class="ace-icon fa fa-flag bigger-120"></i>
-												</button>
-
-												<button class="btn btn-xs btn-success">
-													<i class="ace-icon fa fa-check bigger-120"></i>
-												</button>
-											</div>
-										</td>
-									</tr>
 								</tbody>
 							</table>
 
@@ -515,103 +132,6 @@
 
 
 					</div>
-				</div>
-
-				<div id="modal-table" class="modal fade" tabindex="-1">
-					<div class="modal-dialog">
-						<div class="modal-content">
-							<div class="modal-header no-padding">
-								<div class="table-header">
-									<button type="button" class="close" data-dismiss="modal"
-										aria-hidden="true">
-										<span class="white">&times;</span>
-									</button>
-									客票行李规定
-								</div>
-							</div>
-
-							<div class="modal-body no-padding">
-								<table
-									class="table table-striped table-bordered table-hover no-margin-bottom no-border-top">
-									<thead>
-										<tr>
-											<th>航班类型</th>
-											<th>客舱级别</th>
-											<th>行李数量上限</th>
-
-											<th><i class="ace-icon fa fa-clock-o bigger-110"></i>
-												每件重量上限</th>
-										</tr>
-									</thead>
-
-									<tbody>
-										<tr>
-											<td><a href="#">国内航班</a></td>
-											<td>头等舱</td>
-											<td>2件</td>
-											<td>5千克</td>
-										</tr>
-
-										<tr>
-											<td><a href="#">国内航班</a></td>
-											<td>头等舱</td>
-											<td>2件</td>
-											<td>5千克</td>
-										</tr>
-										<tr>
-											<td><a href="#">国内航班</a></td>
-											<td>头等舱</td>
-											<td>2件</td>
-											<td>5千克</td>
-										</tr>
-										<tr>
-											<td><a href="#">国内航班</a></td>
-											<td>头等舱</td>
-											<td>2件</td>
-											<td>5千克</td>
-										</tr>
-										<tr>
-											<td><a href="#">国内航班</a></td>
-											<td>头等舱</td>
-											<td>2件</td>
-											<td>5千克</td>
-										</tr>
-										<tr>
-											<td><a href="#">国内航班</a></td>
-											<td>头等舱</td>
-											<td>2件</td>
-											<td>5千克</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-
-							<div class="modal-footer no-margin-top">
-								<button class="btn btn-sm btn-danger pull-left"
-									data-dismiss="modal">
-									<i class="ace-icon fa fa-times"></i> 关闭
-								</button>
-
-								<ul class="pagination pull-right no-margin">
-									<li class="prev disabled"><a href="#"> <i
-											class="ace-icon fa fa-angle-double-left"></i>
-									</a></li>
-
-									<li class="active"><a href="#">1</a></li>
-
-									<li><a href="#">2</a></li>
-
-									<li><a href="#">3</a></li>
-
-									<li class="next"><a href="#"> <i
-											class="ace-icon fa fa-angle-double-right"></i>
-									</a></li>
-								</ul>
-							</div>
-						</div>
-						<!-- /.modal-content -->
-					</div>
-					<!-- /.modal-dialog -->
 				</div>
 				<!-- PAGE CONTENT ENDS -->
 			</div>
