--- a/bmall-backstage/src/main/resources/templates/layout.html
+++ b/bmall-backstage/src/main/resources/templates/layout.html
@@ -45,7 +45,8 @@
 		<script src="/assets/js/jquery-ui.min.js"></script>
 		<script src="/assets/js/jquery.ui.touch-punch.min.js"></script>
 		<script src="/assets/js/ace.min.js"></script>
-			
+		<script src="/assets/js/handlebars.min.js"></script>
+		<script src="/assets/js/bootbox.min.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			setMenuOption();
