--- a/bmall-backstage/src/main/resources/templates/admin/add-role.html
+++ b/bmall-backstage/src/main/resources/templates/admin/add-role.html
@@ -57,14 +57,14 @@ var setting = {
   <div class="left_Competence_add">
     <div class="Competence_add">
      <form id="dataForm">
-     <input type="hidden" id="roleId" name="roleId">
+     <input type="hidden" id="roleId" name="roleId" value="${roleId}">
      <div class="form-group"><label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 权限名称 </label>
-       <div class="col-sm-9"><input type="text" id="roleName" placeholder=""  name="roleName" class="col-xs-10 col-sm-5"></div>
+       <div class="col-sm-9"><input type="text" id="roleName" value="${roleName}" placeholder=""  name="roleName" class="col-xs-10 col-sm-5"></div>
 	</div>
      <div class="form-group"><label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 权限描述 </label>
-       <div class="col-sm-9"><textarea id="remark" name="remark" class="form-control" placeholder=""></textarea></div>
+       <div class="col-sm-9"><textarea id="remark" name="remark" class="form-control" placeholder="" >${remark}</textarea></div>
 	</div>
-	<div class="form-group"><label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 权限描述 </label>
+	<div class="form-group"><label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 权限 </label>
        <div class="col-sm-9">
          <label><input name="state" type="radio" class="ace" checked="checked" value="ENABLE"><span class="lbl">启用</span></label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
          <label><input name="state" type="radio" class="ace" value="DISABLE"><span class="lbl">关闭</span></label>
