--- a/bmall-backstage/src/main/resources/templates/admin/role-list.html
+++ b/bmall-backstage/src/main/resources/templates/admin/role-list.html
@@ -67,9 +67,9 @@
 			<tr>
 			  <th class="center"><label><input type="checkbox" class="ace"><span class="lbl"></span></label></th>
 			  <th>权限名称</th>
-			  <th>人数</th>
-              <th>用户名称</th>
-			  <th class="hidden-480">描述</th>             
+			  <th>状态</th>
+              <th>描述</th>
+			  <th class="hidden-480">时间</th>             
 			  <th class="hidden-480">操作</th>
              </tr>
 		    </thead>
@@ -83,7 +83,7 @@
 		<tr>
   <td class="center"><label><input type="checkbox" class="ace"><span class="lbl"></span></label></td>
 <td>{{roleName}}</td>
-<td>{{state}}</td>
+<td>{{stateCN}}</td>
 <td>{{remark}}</td>
 <td>{{createTime}}</td>
 <td>
