--- a/bmall-backstage/src/main/resources/templates/layout.html
+++ b/bmall-backstage/src/main/resources/templates/layout.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="/assets/css/ace-rtl.min.css" />
 		<link rel="stylesheet" href="/assets/css/ace-skins.min.css" />
         <link rel="stylesheet" href="/css/style.css"/>
+         <link rel="stylesheet" href="/css/vali/screen.css"/>
          <link href="/assets/css/codemirror.css" rel="stylesheet">
 		<!--[if lte IE 8]>
 		  <link rel="stylesheet" href="/assets/css/ace-ie.min.css" />
@@ -43,6 +44,8 @@
 		<script src="/assets/js/ace.min.js"></script>
 		<script src="/assets/laydate/laydate.js" type="text/javascript"></script>
         <script src="/js/jquery.nicescroll.js" type="text/javascript"></script>
+        <script src="/assets/layer/layer.js" type="text/javascript"></script>
+        <script src="/js/jquery.validate.js"></script>
         
         
 <script type="text/javascript">	
