--- a/bmall-backstage/src/main/resources/templates/admin/add-role.html
+++ b/bmall-backstage/src/main/resources/templates/admin/add-role.html
@@ -5,7 +5,35 @@
 <script type="text/javascript" src="/js/jquery.ztree.core.js"></script>
 <script type="text/javascript" src="/js/jquery.ztree.excheck.js"></script>
 <script th:inline="javascript">
-var setting = {
+
+  $(function(){
+	  $("#dataForm").validate({
+         debug: true, //调试模式取消submit的默认提交功能   
+         focusInvalid: false, //当为false时，验证无效时，没有焦点响应  
+         onkeyup: false, 
+         rules:{
+             roleName:{
+                 required:true
+             },
+             remark:{
+                 required:true
+             },
+             
+         },
+         messages:{
+             roleName:{
+                 required:"角色名必填"
+             },
+             remark:{
+                 required:"备注必填"
+             }
+                                          
+         }
+                   
+     });    
+
+  })
+  var setting = {
 		check: {
 			enable: true
 		},
@@ -18,38 +46,54 @@ var setting = {
 	$(document).ready(function(){
 		$.fn.zTree.init($("#treeDemo"), setting, [[${authList}]]);
 	});
-    function editRole(){
-     var treeObj=$.fn.zTree.getZTreeObj("treeDemo");
-     var nodes=treeObj.getCheckedNodes(true); 
-     var v="";
-     for(var i=0;i<nodes.length;i++){
-         v+=nodes[i].id + ",";
-     }
-    var header = $("meta[name='_csrf_header']").attr("content");
-    var token = $("meta[name='_csrf']").attr("content");
-	var pArray = $('#dataForm').serializeArray();
-	var params = {};
-	for(var i = 0;i < pArray.length;i++){
-		if($.trim(pArray[i].value) != ''){
-			params[pArray[i].name] = pArray[i].value;
+	
+   function editRole(){
+	  if (!$("#dataForm").valid()) {
+	        return;
+	  }
+	  subData();
+    }
+   function subData(){
+	   var treeObj=$.fn.zTree.getZTreeObj("treeDemo");
+	     var nodes=treeObj.getCheckedNodes(true); 
+	     var v="";
+	     for(var i=0;i<nodes.length;i++){
+	         v+=nodes[i].id + ",";
+	     }
+	    var header = $("meta[name='_csrf_header']").attr("content");
+	    var token = $("meta[name='_csrf']").attr("content");
+		var pArray = $('#dataForm').serializeArray();
+		var params = {};
+		for(var i = 0;i < pArray.length;i++){
+			if($.trim(pArray[i].value) != ''){
+				params[pArray[i].name] = pArray[i].value;
+			}
 		}
-	}
-    params.list=v;
-	$.ajax({
-		type : "POST",
-		url : '/admin/addRole',
-		beforeSend: function(xhr){
-	        xhr.setRequestHeader(header, token);
-	    },
-		data : params,
-		dataType : 'json',        
-		success : function(data) {
-			console.log(data);
-		}
-	});  
-}
+	    params.list=v;
+		$.ajax({
+			type : "POST",
+			url : '/admin/addRole',
+			beforeSend: function(xhr){
+		        xhr.setRequestHeader(header, token);
+		    },
+			data : params,
+			dataType : 'json',        
+			success : function(data) {
+				if(data.code=='0'){
+					layer.alert("成功",{			
+				        icon:1,		
+				    }) 
+				}else{
+					layer.alert(data.msg,{		
+				        icon:2,		
+				    }) 
+				}
+				
+			}
+		});   
+   }
  function toIndex(){
-		location.href="/admin/addRoleView/0";
+		location.href="/admin/role";
 	}
 </script>
 </head>
@@ -57,17 +101,21 @@ var setting = {
   <div class="left_Competence_add">
     <div class="Competence_add">
      <form id="dataForm">
-     <input type="hidden" id="roleId" name="roleId" value="${roleId}">
+     <input type="hidden" id="roleId" name="roleId" th:value="${roleId}">
      <div class="form-group"><label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 权限名称 </label>
-       <div class="col-sm-9"><input type="text" id="roleName" value="${roleName}" placeholder=""  name="roleName" class="col-xs-10 col-sm-5"></div>
+       <div class="col-sm-9"><input type="text" id="roleName" th:value="${roleName}" placeholder=""  name="roleName" class="col-xs-10 col-sm-5"></div>
 	</div>
      <div class="form-group"><label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 权限描述 </label>
-       <div class="col-sm-9"><textarea id="remark" name="remark" class="form-control" placeholder="" >${remark}</textarea></div>
+       <div class="col-sm-9"><textarea id="remark" name="remark" class="form-control" placeholder="" th:text="${remark}" ></textarea></div>
 	</div>
-	<div class="form-group"><label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 权限 </label>
-       <div class="col-sm-9">
+	<div class="form-group"><label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 状态 </label>
+       <div class="col-sm-9" th:if="${state=='ENABLE' || state==null}">
          <label><input name="state" type="radio" class="ace" checked="checked" value="ENABLE"><span class="lbl">启用</span></label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
          <label><input name="state" type="radio" class="ace" value="DISABLE"><span class="lbl">关闭</span></label>
+       </div>
+       <div class="col-sm-9" th:if="${state=='DISABLE'}">
+         <label><input name="state" type="radio" class="ace"  value="ENABLE"><span class="lbl">启用</span></label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         <label><input name="state" type="radio" class="ace"  checked="checked" value="DISABLE"><span class="lbl">关闭</span></label>
        </div>
 	</div>
 	<div class="form-group"><label class="col-sm-2 control-label no-padding-right" for="form-field-1"> 权限 </label>
@@ -77,7 +125,7 @@ var setting = {
      
    <!--按钮操作-->
    <div class="Button_operation">
-	 <button onclick="editRole();" class="btn btn-primary radius" type="button"><i class="fa fa-save "></i> 保存并提交</button>
+	 <button  class="btn btn-primary radius" type="button" onclick="editRole()"><i class="fa fa-save "></i> 保存并提交</button>
 	 <button onclick="toIndex()" class="btn btn-secondary  btn-warning" type="button"><i class="fa fa-reply"></i> 返回上一步</button>
 	</div>
    </div>
